feat!: new code system api tests
Refactor existing Code System API tests and include new test cases for
certain uncovered scenarios.
Support filtering CodeSystem's by their title/oid/tooling from the rest
api.